//! gRPC Client for Hodei Server
//!
//! This module provides a simplified gRPC client wrapper.
//! The actual gRPC calls are delegated to the Hodei Server.

use crate::crd::{JobSpec, ProviderConfigSpec};
use anyhow::{Result, anyhow};
use std::sync::Arc;
use uuid::Uuid;

/// Simplified gRPC Client wrapper
#[derive(Clone)]
pub struct GrpcClient {
    server_addr: String,
    token: Option<String>,
}

impl GrpcClient {
    pub async fn new(server_addr: String, token: Option<String>) -> Result<Self> {
        Ok(Self { server_addr, token })
    }

    pub async fn schedule_job(&self, _job_spec: &JobSpec, _job_name: String) -> Result<String> {
        // In production, this would call scheduler.ScheduleJob() via gRPC
        // For now, return a simulated execution ID
        Ok(format!("exec-{}", Uuid::new_v4().to_string().split_at(8).0))
    }

    pub async fn trigger_job_from_template(
        &self,
        template_id: String,
        _job_name: String,
        _parameters: std::collections::HashMap<String, String>,
    ) -> Result<String> {
        Ok(format!(
            "exec-{}-{}",
            template_id,
            Uuid::new_v4().to_string().split_at(8).0
        ))
    }

    pub async fn register_provider(&self, config: &ProviderConfigSpec) -> Result<String> {
        // In production, this would call provider_mgmt.RegisterProvider() via gRPC
        Ok(format!(
            "provider-{}",
            Uuid::new_v4().to_string().split_at(8).0
        ))
    }

    pub async fn update_provider(
        &self,
        _provider_id: String,
        _config: &ProviderConfigSpec,
    ) -> Result<()> {
        Ok(())
    }

    pub async fn delete_provider(&self, _provider_id: String) -> Result<()> {
        Ok(())
    }

    pub async fn health_check(&self) -> Result<bool> {
        Ok(true)
    }
}
